--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.0'
     }
     packagingOptions {
         resources {
@@ -47,6 +47,7 @@ android {
 }
 
 dependencies {
+//    implementation 'androidx.core:core-ktx:+'
     def nav_version = "2.6.0"
 
     implementation 'androidx.core:core-ktx:1.8.0'
@@ -60,6 +61,14 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
     implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+//    implementation 'com.google.code.gson:gson:2.10.1'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.10.1'
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0"
+    // Kotlin serialization
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
+    implementation "androidx.core:core-ktx:1.11.0-beta02"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
