--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+//    id "org.jetbrains.kotlin.plugin.serialization" version "1.8.21"
+    id 'kotlinx-serialization'
 }
 
 android {
@@ -53,7 +55,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.activity:activity-compose:1.7.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
@@ -66,10 +68,13 @@ dependencies {
 //    implementation 'com.squareup.retrofit2:converter-gson:2.10.1'
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0"
     // Kotlin serialization
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
-    implementation "androidx.core:core-ktx:1.11.0-beta02"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
+//    implementation "androidx.core:core-ktx:1.11.0-beta02"
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
